Fix newlines on the truncated bit

--- a/CIFAR10/GAN_CIFAR10.ipynb
+++ b/CIFAR10/GAN_CIFAR10.ipynb
@@ -866,8 +866,8 @@
         {
           "output_type": "stream",
           "text": [
-            "[redacted, we don't need thousands of lines of this on github]",
-            "...",
+            "[redacted, we don't need thousands of lines of this on github]\n",
+            "...\n",
             ">200, 301/390, d1=0.543, d2=0.522 g=1.466\n",
             ">200, 311/390, d1=0.510, d2=0.400 g=1.388\n",
             ">200, 321/390, d1=0.573, d2=0.520 g=1.393\n",
